k8s/primerapi-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: primerapi
spec:
  selector:
    app: primerapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
